#pragma once

#include "item.h"

namespace lucy
{

class predicate;

class atom : public item
{
public:
  atom(core &cr, const context ctx, const predicate &pred);
  atom(const atom &orig) = delete;
  virtual ~atom();

public:
  const var sigma; // this variable represents the state of the atom: if the variable is true, the atom is active; if the variable is false, the atom is unified; if the variable is undefined, the atom is not justified..
};
}